k8s/eshop-payments-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /home/rob/apps/kompose convert -f eshop-compose.yaml
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: eshop-payments
  name: eshop-payments
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: eshop-payments
  template:
    metadata:
      annotations:
        kompose.cmd: /home/rob/apps/kompose convert -f eshop-compose.yaml
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: eshop-payments
    spec:
      containers:
        - env:
            - name: AXUM_PORT
              value: "3000"
            - name: MONGODB_COLLECTION
              value: payments
            - name: MONGODB_DB
              value: eshop-payment
            - name: MONGODB_URI
              value: mongodb://eshop-mongodb:27017
            - name: RABBITMQ_PASS
              value: guest
            - name: RABBITMQ_PORT
              value: "5672"
            - name: RABBITMQ_URI
              value: eshop-rabbitmq
            - name: RABBITMQ_USER
              value: guest
            - name: AUTH0_DOMAIN
              value: https://dev-3y955wo3.us.auth0.com
            - name: AUTH0_AUDIENCE
              value: http://localhost:9090
            - name: LOG_PATH
              value: /app/logs/eshop-payment-service.log
            - name: PAYMENT_REDIRECT_BASE_URL
              value: https://robert-reyes-dev.xyz
            - name: STRIPE_API_BASE_URL
              value: __STRIPE_API_BASE_URL__
            - name: STRIPE_API_KEY
              value: __STRIPE_API_KEY__
          image: eshopContainerRegistryXYZ.azurecr.io/eshop-aks/payment-service:20250423144435
          name: payment-service
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
              protocol: TCP
          volumeMounts:
            - mountPath: /app/logs
              name: axum-logs
      restartPolicy: Always
      volumes:
        - name: axum-logs
          persistentVolumeClaim:
            claimName: eshop-axum-pvc
