k8s/eshop-products-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /home/rob/apps/kompose convert -f eshop-compose.yaml
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: eshop-products
  name: eshop-products
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: eshop-products
  template:
    metadata:
      annotations:
        kompose.cmd: /home/rob/apps/kompose convert -f eshop-compose.yaml
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: eshop-products
    spec:
      containers:
        - env:
            - name: AXUM_PORT
              value: "3000"
            - name: MONGODB_COLLECTION
              value: products
            - name: MONGODB_DB
              value: eshop-product
            - name: MONGODB_URI
              value: mongodb://10.0.60.172:27017
            - name: RABBITMQ_PASS
              value: guest
            - name: RABBITMQ_PORT
              value: "5672"
            - name: RABBITMQ_URI
              value: 172.202.165.31
            - name: RABBITMQ_USER
              value: guest
            - name: AUTH0_DOMAIN
              value: __AUTH0_DOMAIN__
            - name: AUTH0_AUDIENCE
              value: __AUTH0_AUDIENCE__
            - name: LOG_PATH
              value: /app/logs/eshop-product-service.log
          image: eshopContainerRegistryXYZ.azurecr.io/eshop-aks/product-service:20250331031734
          name: product-service
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
              protocol: TCP
          volumeMounts:
            - mountPath: /app/logs
              name: axum-logs
      restartPolicy: Always
      volumes:
        - name: axum-logs
          persistentVolumeClaim:
            claimName: eshop-axum-pvc
