k8s/eshop-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /home/rob/apps/kompose convert -f eshop-compose.yaml
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: eshop-ui
  name: eshop-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: eshop-ui
  template:
    metadata:
      annotations:
        kompose.cmd: /home/rob/apps/kompose convert -f eshop-compose.yaml
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: eshop-ui
    spec:
      containers:
        - image: eshopContainerRegistryXYZ.azurecr.io/eshop-aks/ui:20250412195644
          name: ui
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      restartPolicy: Always
