k8s/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ../kompose-linux-amd64 --file /home/rob/Code/Rust/eshop-cloud-resources/eshop-compose.yaml convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: grafana
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: grafana
  template:
    metadata:
      annotations:
        kompose.cmd: ../kompose-linux-amd64 --file /home/rob/Code/Rust/eshop-cloud-resources/eshop-compose.yaml convert
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: grafana
    spec:
      containers:
        - image: grafana/grafana
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          name: eshop-grafana-server
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
