k8s/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /home/rob/apps/kompose convert -f eshop-compose.yaml
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: mongodb
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongodb
  template:
    metadata:
      annotations:
        kompose.cmd: /home/rob/apps/kompose convert -f eshop-compose.yaml
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: mongodb
    spec:
      containers:
        - image: mongodb/mongodb-community-server
          name: mongodb
          ports:
            - containerPort: 27017
              protocol: TCP
          volumeMounts:
            - mountPath: /data/db
              name: mongodb-claim1
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "500m"
      restartPolicy: Always
      volumes:
        - name: mongodb-claim1
          persistentVolumeClaim:
            claimName: mongodb-claim1
