k8s/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /home/rob/apps/kompose convert -f eshop-compose.yaml
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: rabbitmq
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rabbitmq
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /home/rob/apps/kompose convert -f eshop-compose.yaml
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: rabbitmq
    spec:
      containers:
        - image: rabbitmq:3-management
          livenessProbe:
            exec:
              command:
                - rabbitmqctl
                - status
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          name: rabbitmq
          ports:
            - containerPort: 5672
              protocol: TCP
            - containerPort: 15672
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/rabbitmq/rabbitmq
              name: rabbitmq-claim1
            - mountPath: /var/log/rabbitmq
              name: rabbitmq-claim2
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
      restartPolicy: Always
      volumes:
        - name: rabbitmq-claim1
          persistentVolumeClaim:
            claimName: rabbitmq-claim1
        - name: rabbitmq-claim2
          persistentVolumeClaim:
            claimName: rabbitmq-claim2
