k8s/splunk-forwarder-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ../kompose-linux-amd64 --file /home/rob/Code/Rust/eshop-cloud-resources/eshop-compose.yaml convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: splunk-forwarder
  name: splunk-forwarder
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: splunk-forwarder
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ../kompose-linux-amd64 --file /home/rob/Code/Rust/eshop-cloud-resources/eshop-compose.yaml convert
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: splunk-forwarder
    spec:
      containers:
        - env:
            - name: SPLUNK_ADD
              value: monitor /opt/splunkforwarder/var/log/axum-logs -sourcetype axum-app
            - name: SPLUNK_FORWARD_SERVER
              value: eshop-splunk:9997
            - name: SPLUNK_GROUP
              value: root
            - name: SPLUNK_PASSWORD
              value: Password123!
            - name: SPLUNK_STANDALONE_URL
              value: eshop-splunk
            - name: SPLUNK_START_ARGS
              value: --accept-license
            - name: SPLUNK_USER
              value: root
          image: splunk/universalforwarder:9.3.2
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "500m"
          name: splunk-forwarder
          volumeMounts:
            - mountPath: /opt/splunkforwarder/var/log/axum-logs
              name: axum-logs
      restartPolicy: Always
      volumes:
        - name: axum-logs
          persistentVolumeClaim:
            claimName: eshop-axum-pvc
