k8s/eshop-orders-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /home/rob/apps/kompose convert -f eshop-compose.yaml
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: eshop-orders
  name: eshop-orders
spec:
  type: ClusterIP
  ports:
    - name: "9091"
      port: 9091
      targetPort: 3000
  selector:
    io.kompose.service: eshop-orders
