k8s/eshop-payments-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /home/rob/apps/kompose convert -f eshop-compose.yaml
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: eshop-payments
  name: eshop-payments
spec:
  type: ClusterIP
  ports:
    - name: "9093"
      port: 9093
      targetPort: 3000
  selector:
    io.kompose.service: eshop-payments
