k8s/eshop-products-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /home/rob/apps/kompose convert -f eshop-compose.yaml
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: eshop-products
  name: eshop-products
spec:
  type: LoadBalancer
  ports:
    - name: "9090"
      port: 9090
      targetPort: 3000
  selector:
    io.kompose.service: eshop-products
