k8s/eshop-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /home/rob/apps/kompose convert -f eshop-compose.yaml
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: eshop-ui
  name: eshop-ui
spec:
  ports:
    - name: "5173"
      port: 5173
      targetPort: 80
  selector:
    io.kompose.service: eshop-ui
