k8s/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ../kompose-linux-amd64 --file /home/rob/Code/Rust/eshop-cloud-resources/eshop-compose.yaml convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: prometheus
  name: eshop-prometheus
spec:
  type: ClusterIP
  ports:
    - name: "9092"
      port: 9092
      targetPort: 9090
  selector:
    io.kompose.service: prometheus
