k8s/splunk-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ../kompose-linux-amd64 --file /home/rob/Code/Rust/eshop-cloud-resources/eshop-compose.yaml convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: splunk
  name: splunk
spec:
  type: LoadBalancer
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
    - name: "8088"
      port: 8088
      targetPort: 8088
    - name: "9997"
      port: 9997
      targetPort: 9997
  selector:
    io.kompose.service: splunk
