k8s/eshop-adminer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adminer-ingress
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "x/32" # add more, comma-separated
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: adminer.robert-reyes-dev.xyz
      http:
        paths:
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: homeos-adminer
                port:
                  number: 8080
