k8s/eshop-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eshop-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/error-page: 404 = /index.html # Fallback to index.html on 404 http errors. This allows React routing to function via the ingress controller
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - homeos.robert-reyes-dev.xyz
      secretName: tls-homeos-bundle
  rules:
    - host: eshop.robert-reyes-dev.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eshop-ui
                port:
                  number: 80
    - host: homeos.robert-reyes-dev.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeos-ui
                port:
                  number: 80
